--- a/css/scoreboard.css
+++ b/css/scoreboard.css
@@ -14,7 +14,8 @@
 }
 
 .amount-input,
-.sort-input {
+.sort-input,
+.mode-input {
     background-color: var(--color2);
     padding: 0 0.75em;
     height: 3em;
